# saveclaudenode

./: .gitignore  Cargo.toml  INSTALL.md  LICENSE  README.md  README.zh-TW.md  install-hook.bat  install-hook.ps1  start-guard-silent.vbs  start-guard.bat
.github/workflows/: release.yml
hooks/: block-node-kill.js
src/: main.rs
