[package]
name = "saveclaudenode"
version = "0.1.0"
edition = "2021"
authors = ["jeffb"]

[[bin]]
name = "saveclaudenode"
path = "src/main.rs"

[dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_Security",
] }
sysinfo = "0.31"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
